--- a/.github/workflows/ue-docker-linux.yml
+++ b/.github/workflows/ue-docker-linux.yml
@@ -83,7 +83,7 @@ jobs:
 
       - name: Build Unreal Engine Docker image
         run: |
-          ue4-docker build custom -repo="${{ inputs.ue_repo }}" -branch="${{ inputs.ue_version }}" \
+          ue4-docker build 5.0.3 -repo="${{ inputs.ue_repo }}" \
           -basetag ubuntu22.04 \
           -suffix "${{ inputs.ue_version }}" \
           -username=${{ secrets.DOCKER_USERNAME }} \
