--- a/.github/workflows/ue-docker-linux.yml
+++ b/.github/workflows/ue-docker-linux.yml
@@ -84,7 +84,7 @@ jobs:
       - name: Build Unreal Engine Docker image
         run: |
           ue4-docker build custom -repo="${{ inputs.ue_repo }}" -branch="${{ inputs.ue_version }}" \
-          -basetag ${{ inputs.ue_version == '5.0' && 'ubuntu20.04' || ubuntu22.04 }} \
+          -basetag ${{ inputs.ue_version == '5.0' && 'ubuntu20.04' || 'ubuntu22.04' }} \
           -suffix "${{ inputs.ue_version }}" \
           -username=${{ secrets.DOCKER_USERNAME }} \
           -password=${{ secrets.DOCKER_TOKEN }} \
