--- a/.github/workflows/sdk-build.yml
+++ b/.github/workflows/sdk-build.yml
@@ -21,17 +21,6 @@ jobs:
       run:
         shell: bash
     steps:
-      - name: Configure env for Linux arm64 runner
-        if: ${{ inputs.target == 'LinuxArm64' }}
-        run: |
-          apt-get update
-          apt-get -y install sudo
-          apt-get -y install wget
-          apt-get -y install cmake
-          apt-get -y install software-properties-common
-          apt-get -y install git
-          git config --global --add safe.directory $(pwd)
-
       - uses: actions/checkout@v4
 
       - name: Select submodule
@@ -55,8 +44,7 @@ jobs:
         with:
           path: |
             ${{ steps.env.outputs.path }}
-            modules/sentry-java/sentry-android-ndk/build/intermediates/merged_native_libs/release/out/lib
-          key: sdk=${{ inputs.target }}-${{ hashFiles('submodule-status', 'scripts/build-*.sh', '.github/workflows/sdk.yml') }}
+          key: sdk=${{ inputs.target }}-${{ hashFiles('submodule-status', 'scripts/build-*.sh', '.github/workflows/sdk-build.yml') }}
 
       - name: Install Linux/LinuxArm64 Dependencies
         if: ${{ (inputs.target == 'Linux' || inputs.target == 'LinuxArm64') && steps.cache.outputs.cache-hit != 'true' }}
