Fix minor compilation errors when packaging sample for Xbox

--- a/sample/Config/DefaultEngine.ini
+++ b/sample/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/SentryPlayground.TestGameInstance
+GameInstanceClass=/Script/SentryPlayground.SentryPlaygroundGameInstance
 GameDefaultMap=/Game/Maps/SentryDemo.SentryDemo
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
