chore: Build sentry-native in Ubuntu 20.04 docker container for better compatibility with old Linux distros

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: package-plugin-workflow
 
-on: 
+on:
   push:
     branches:
       - main
@@ -33,12 +33,14 @@ jobs:
     with:
       target: Linux
       runsOn: ubuntu-22.04
+      container: ubuntu:20.04
 
   linux-arm64-sdk:
     uses: ./.github/workflows/sdk-build.yml
     with:
       target: LinuxArm64
       runsOn: ubuntu-22.04-arm
+      container: arm64v8/ubuntu:20.04
 
   windows-crashpad-sdk:
     uses: ./.github/workflows/sdk-build.yml
