--- a/.github/workflows/ue-docker-windows.yml
+++ b/.github/workflows/ue-docker-windows.yml
@@ -67,8 +67,19 @@ jobs:
           architecture: 'x64'
 
       - name: Install unreal-docker
+        shell: pwsh
         run: |
-            pip install ue4-docker
+            # Download and extract ue4-docker
+            Invoke-WebRequest -Uri "https://github.com/adamrehn/ue4-docker/archive/refs/heads/master.zip" -OutFile "ue-docker.zip"
+            Expand-Archive -Path "ue-docker.zip" -DestinationPath "."
+            cd ue4-docker-master
+
+            # Patch install-prerequisites.ps1
+            $file = ".src\ue4docker\dockerfiles\ue4-build-prerequisites\windows\install-prerequisites.ps1"
+            (Get-Content $file) -replace 'Microsoft.VisualStudio.Component.VC.Tools.x86.x64', 'Microsoft.VisualStudio.Component.VC.14.38.17.8.x86.x64' | Set-Content $file
+
+            # Install the patched ue4-docker package
+            pip install -e .
 
       - name: Configure unreal-docker
         run: |
