Add Linux packaging

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,7 +155,7 @@ jobs:
       matrix:
         # Note: these versions must match scripts/packaging/engine-versions.txt
         # Note: Currently 5.0 is not supported due to ue4-docker issue https://github.com/adamrehn/ue4-docker/issues/373
-        unreal: ['4.27', '5.1', '5.2', '5.3', '5.4', '5.5']
+        unreal: ['4.27', '5.1', '5.2', '5.3', '5.4', '5.5', '5.6']
     uses: ./.github/workflows/test-linux.yml
     with:
       unreal-version: ${{ matrix.unreal }}
