--- a/.github/workflows/ue-docker-windows.yml
+++ b/.github/workflows/ue-docker-windows.yml
@@ -15,6 +15,7 @@ on:
         - 5.3
         - 5.4
         - 5.5
+        - 5.6
       ue_repo:
         description: Set Unreal Engine repository
         required: true
@@ -67,7 +68,14 @@ jobs:
 
       - name: Install unreal-docker
         run: |
-            pip install ue4-docker
+            Invoke-WebRequest -Uri "https://github.com/adamrehn/ue4-docker/archive/refs/tags/v0.0.116.zip" -OutFile "ue-docker.zip"
+            Expand-Archive -Path "ue-docker.zip" -DestinationPath "."
+            cd ue4-docker-0.0.116
+            # Patch install-prerequisites.ps1 to fix pre-requisites image build
+            $file = "src\ue4docker\dockerfiles\ue4-build-prerequisites\windows\install-prerequisites.ps1"
+            (Get-Content $file) -replace 'Microsoft.VisualStudio.Component.VC.Tools.x86.x64', 'Microsoft.VisualStudio.Component.VC.14.38.17.8.x86.x64' | Set-Content $file
+            # Install the patched ue4-docker package
+            pip install -e .
 
       - name: Configure unreal-docker
         run: |
