--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -1,6 +1,8 @@
 name: update-dependencies
 
 on:
+  # Allow manual triggering.
+  workflow_dispatch:
   # Run every day.
   schedule:
     - cron: '0 3 * * *'
@@ -39,5 +41,13 @@ jobs:
     with:
       path: plugin-dev/sentry-cli.properties
       name: CLI
+    secrets:
+      api-token: ${{ secrets.CI_DEPLOY_KEY }}
+
+  android-gradle-plugin:
+    uses: getsentry/github-workflows/.github/workflows/updater.yml@v2
+    with:
+      path: scripts/update-android-gradle-plugin.sh
+      name: Android Gradle Plugin
     secrets:
       api-token: ${{ secrets.CI_DEPLOY_KEY }}
