--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -58,7 +58,7 @@ jobs:
           docker network create --ipv6 --subnet 2001:0DB8::/112 ip6net
           docker run -td \
             --name unreal \
-            --volume "$WORKSPACE_PATH":/workspace \
+            --volume "$WORKSPACE_PATH:/workspace" \
             --workdir /workspace \
             --user $uid:$gid \
             --env HOME="/home/$user" \
