--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -41,3 +41,11 @@ jobs:
       name: CLI
     secrets:
       api-token: ${{ secrets.CI_DEPLOY_KEY }}
+
+  android-gradle-plugin:
+    uses: getsentry/github-workflows/.github/workflows/updater.yml@v2
+    with:
+      path: scripts/update-android-gradle-plugin.sh
+      name: Android Gradle Plugin
+    secrets:
+      api-token: ${{ secrets.CI_DEPLOY_KEY }}
