--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,7 +10,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          submodules: recursive
+          ref: ${{ github.ref_name }}
+          fetch-depth: 0
 
       - name: Check BOM
         run: |
