--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,4 +30,4 @@ jobs:
       - name: Commit Formatted Code
         env:
           GITHUB_BRANCH: ${{ github.ref }}
-        run: ./scripts/commit-formatted-code.sh $GITHUB_BRANCH
+        run: ./scripts/commit-formatted-code.sh "${GITHUB_BRANCH#refs/heads/}"
