--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,9 +25,26 @@ jobs:
           echo "✓ All source files have no BOM."
 
       - name: Clang Format
-        run: find plugin-dev/Source/Sentry plugin-dev/Source/SentryEditor -name '*.h' -o -name '*.cpp' | xargs /usr/bin/clang-format -i --Werror
+        id: clang-format
+        run: |
+          find plugin-dev/Source/Sentry plugin-dev/Source/SentryEditor -name '*.h' -o -name '*.cpp' | xargs /usr/bin/clang-format -i
+          # Check if clang-format made any changes
+          if git diff --quiet; then
+            echo "No formatting changes needed. All code is already properly formatted."
+            echo "FORMATTING_CHANGED=false" >> $GITHUB_OUTPUT
+          else
+            echo "Code formatting changes detected."
+            echo "FORMATTING_CHANGED=true" >> $GITHUB_OUTPUT
+          fi
 
       - name: Commit Formatted Code
+        if: steps.clang-format.outputs.FORMATTING_CHANGED == 'true'
         env:
-          GITHUB_BRANCH: ${{ github.ref }}
-        run: ./scripts/commit-formatted-code.sh "${GITHUB_BRANCH#refs/heads/}"
+          GITHUB_BRANCH: ${{ github.ref_name }}
+        run: |
+          git config --global user.name 'Sentry Github Bot'
+          git config --global user.email 'bot+github-bot@sentry.io'
+          git fetch
+          git switch "${GITHUB_BRANCH}" || git switch -c "${GITHUB_BRANCH}" --track "origin/${GITHUB_BRANCH}"
+          git commit -am "Format code"
+          git push --set-upstream origin ${GITHUB_BRANCH}
