--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Check Copyright Notice
         run: |
           echo "Checking for copyright notice in source files..."
-          files_without_copyright=$(find plugin-dev/Source/Sentry plugin-dev/Source/SentryEditor -name "*.h" -o -name "*.cpp" | xargs grep -L "Copyright (c) 2025 Sentry. All Rights Reserved." 2>/dev/null || true)
+          files_without_copyright=$(find plugin-dev/Source/Sentry plugin-dev/Source/SentryEditor -name "*.h" -o -name "*.cpp" | xargs grep -L "Copyright (c) .* Sentry. All Rights Reserved." 2>/dev/null || true)
           if [ -n "$files_without_copyright" ]; then
             echo "ERROR: Found files without proper copyright notice:"
             echo "$files_without_copyright"
