chore: Add check if source files contain copyright notice (#1014)
* Add check if all source files have copyright notice

* Add wildcard for year

* Mess with copyrights

* Add regex for year

* Fix copyright

* Move copyright pattern to variable

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,6 +21,18 @@ jobs:
           fi          
           echo "✓ All source files have no BOM."
 
+      - name: Check Copyright Notice
+        run: |
+          echo "Checking for copyright notice in source files..."
+          COPYRIGHT_PATTERN="Copyright (c) [0-9][0-9][0-9][0-9] Sentry\. All Rights Reserved\."
+          files_without_copyright=$(find plugin-dev/Source/Sentry plugin-dev/Source/SentryEditor -name "*.h" -o -name "*.cpp" | xargs grep -L "$COPYRIGHT_PATTERN" 2>/dev/null || true)
+          if [ -n "$files_without_copyright" ]; then
+            echo "ERROR: Found files without proper copyright notice:"
+            echo "$files_without_copyright"
+            exit 1
+          fi
+          echo "✓ All source files have proper copyright notice."
+
       - name: Clang Format
         id: clang-format
         run: |
