--- a/plugin-dev/Sentry.uplugin
+++ b/plugin-dev/Sentry.uplugin
@@ -7,7 +7,7 @@
 	"Category": "Code Plugins",
 	"CreatedBy": "Sentry",
 	"CreatedByURL": "https://sentry.io/",
-	"DocsURL": "https://docs.sentry.io/",
+	"DocsURL": "https://docs.sentry.io/platforms/unreal/",
 	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/99f5c02de5fa49ab97976a3a852e5408",
 	"SupportURL": "https://docs.sentry.io/support/",
 	"CanContainContent": false,
