--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,7 @@ plugin-dev/Intermediate/*
 .DS_Store
 
 # Ignore package release
-package-release-github/
-package-release-marketplace/
+package-release/
 sentry-unreal-*.zip
 
 # Prebuilt libraries & artifacts are collected in CI.
