--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -8,6 +8,8 @@ on:
   push:
     branches:
       - main
+  # Allow a manual trigger to be able to run the update when there are new dependencies.
+  workflow_dispatch:
 
 jobs:
   native:
