Update warning handling
Fix container name on Linux

Fix xml

Fix

Add engine build config to repo instead of creating it in ci

Move build config to sample dir

Revert "Move build config to sample dir"

This reverts commit 072bed34ded7fda1e2567d69eb29017e078347f8.

Fix path

Fix path on Windows

Fix

Try detect warnings with `DeprecationWarningLevel`

Add DefaultWarningLevel

Escape container user

Fix

--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -107,6 +107,12 @@ jobs:
         # sentry-native requires write access to sample project directory in order to initialize itself properly
         run: docker exec -w /workspace/checkout unreal chmod -R +x sample
 
+      - name: Update engine's build configuration
+        run: |
+          docker exec unreal bash -c "
+            mkdir -p ~/.config/Unreal\ Engine/UnrealBuildTool ;
+            cp /workspace/checkout/.github/BuildConfiguration.xml ~/.config/Unreal\ Engine/UnrealBuildTool/ "            
+
       - name: Run tests
         id: run-tests
         env:
@@ -124,8 +130,7 @@ jobs:
             -stage \
             -prereqss \
             -package \
-            -archive \
-            -WarningsAsErrors
+            -archive
           docker exec -w /workspace/checkout/sample unreal bash -c "
             cp -r '/home/gh/Library/Logs/Unreal Engine/LocalBuildLogs' Saved/Logs  "
           docker exec -w /workspace/checkout/sample unreal /home/ue4/UnrealEngine/Engine/Binaries/Linux/"$EDITOR_BINARY" \
