--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -118,8 +118,6 @@ jobs:
         env:
           EDITOR_BINARY: ${{ inputs.unreal-version == '4.27' && 'UE4Editor' || 'UnrealEditor' }}
         run: |
-          docker exec -w /workspace/checkout/sample unreal bash -c "
-            ls -al /workspace/checkout/sample/Plugins/sentry "
           docker exec -w /workspace/checkout/sample unreal /home/ue4/UnrealEngine/Engine/Build/BatchFiles/RunUAT.sh BuildCookRun \
             -project=/workspace/checkout/sample/SentryPlayground.uproject \
             -archivedirectory=/workspace/checkout/sample/Builds \
@@ -131,8 +129,6 @@ jobs:
             -prereqss \
             -package \
             -archive
-          docker exec -w /workspace/checkout/sample unreal bash -c "
-            cp -r '/home/gh/Library/Logs/Unreal Engine/LocalBuildLogs' Saved/Logs  "
           docker exec -w /workspace/checkout/sample unreal /home/ue4/UnrealEngine/Engine/Binaries/Linux/"$EDITOR_BINARY" \
             /workspace/checkout/sample/SentryPlayground.uproject \
             -ReportExportPath=/workspace/checkout/sample/Saved/Automation \
@@ -147,17 +143,14 @@ jobs:
         if: ${{ always() && steps.run-tests.outcome == 'failure' }}
         uses: actions/upload-artifact@v4
         with:
-          name: UE ${{ inputs.unreal-version }} sample test report
+          name: UE ${{ inputs.unreal-version }} sample test report (Linux)
           path: |
             checkout/sample/Saved/Automation
 
-      - name: Collect sample build info
-        if: contains(fromJson('["success", "failure"]'), steps.run-tests.outcome)
+      - name: Upload sample build
+        if: ${{ success() && steps.run-tests.outcome == 'success' }}
         uses: actions/upload-artifact@v4
         with:
-          name: UE ${{ inputs.unreal-version }} sample build logs
-          path: |
-            checkout/sample/Saved/Logs
-            checkout/sample/Saved/Stats
-            checkout/sample/Saved/MaterialStats
-            checkout/sample/Saved/MaterialStatsDebug
+          name: UE ${{ inputs.unreal-version }} sample build (Linux)
+          path: checkout/sample/Builds/${{ inputs.unreal-version == '4.27' && 'LinuxNoEditor' || 'Linux' }}/
+          retention-days: 1
