--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -11,7 +11,7 @@ env:
 jobs:
   test:
     name: Test
-    runs-on: windows-latest
+    runs-on: windows-2022
 
     steps:
       - name: Log in to GitHub package registry
@@ -79,3 +79,20 @@ jobs:
             -NoPause `
             -NoSplash `
             -NullRHI
+
+      - name: Collect sample test info
+        if: ${{ always() && steps.run-tests.outcome == 'failure' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: UE ${{ inputs.unreal-version }} sample test report (Windows)
+          path: |
+            checkout/sample/Saved/Automation
+
+      - name: Upload sample build
+        if: ${{ success() && steps.run-tests.outcome == 'success' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: UE ${{ inputs.unreal-version }} sample build (Windows)
+          path: checkout/sample/Builds/${{ inputs.unreal-version == '4.27' && 'WindowsNoEditor' || 'Windows' }}/
+          retention-days: 1
+      
